<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.oneandone.ioc-unit</groupId>
    <artifactId>weld-starter-parent</artifactId>
    <version>2.0.52-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>net.oneandone.ioc-unit:weld-starter-parent</name>
    <description>Parentclass for weldstarter. For tests define the profile weld1.1, weld2.3 or weld3.0.</description>
    <url>https://github.com/1and1/ioc-unit</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Andreas Schörk</name>
            <email>andreas.schoerk@1and1.com</email>
            <organization>1and1</organization>
            <organizationUrl>http://www.1and1.com</organizationUrl>
        </developer>
    </developers>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit4.version>4.12</junit4.version>
        <slf4j.version>1.7.25</slf4j.version>
        <logback.version>1.0.9</logback.version>
        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
        <delta-spike.version>1.0.1</delta-spike.version>
        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit4.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <systemPropertyVariables>
                        <javax.xml.parsers.DocumentBuilderFactory>
                            com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
                        </javax.xml.parsers.DocumentBuilderFactory>
                    </systemPropertyVariables>

                    <reportFormat>plain</reportFormat>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <!-- Sets the VM argument line used when unit tests are run. -->
                    <!--argLine> - -add-modules java.xml,java.sql -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006</argLine-->
                    <argLine>
                        ${surefire-argline}
                    </argLine>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <classpathDependencyExcludes>
                        <classpathDependencyExclude>net.oneandone:purecdi-tests</classpathDependencyExclude>
                    </classpathDependencyExcludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>jdk8</id>
            <activation>
                <jdk>
                    (,1.8]
                </jdk>
            </activation>
            <modules>
                <module>weld-starter-base</module>
                <module>weld1-starter</module>
                <module>weld2-starter</module>
                <!--module>weld3-starter</module-->
                <module>weld31-starter</module>
                <module>weld-starter-test</module>
            </modules>
            <properties>
                <surefire-argline>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006</surefire-argline>
            </properties>
        </profile>
        <profile>
            <id>jdk11ff</id>
            <activation>
                <jdk>
                    [11,)
                </jdk>
            </activation>
            <modules>
                <module>weld-starter-base</module>
                <module>weld1-starter</module>
                <module>weld2-starter</module>
                <module>weld31-starter</module>
                <module>weld-starter-test</module>
            </modules>

            <properties>
                <surefire-argline>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006 --add-opens
                    java.base/java.lang=ALL-UNNAMED
                </surefire-argline>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.classfilewriter</groupId>
                    <artifactId>jboss-classfilewriter</artifactId>
                    <version>1.2.5.Final</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>release-sign-artifacts</id>
            <activation>
                <property>
                    <name>performRelease</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven-gpg-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <scm>
        <url>https://github.com/1and1/ioc-unit</url>
        <connection>scm:git:ssh://git@github.com/1and1/ioc-unit.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/1and1/ioc-unit.git</developerConnection>
        <tag>v2.0.27</tag>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/1and1/ioc-unit/issues/</url>
    </issueManagement>
    <inceptionYear>2017</inceptionYear>

    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <url>https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <uniqueVersion>true</uniqueVersion>
            <id>artifactory-snapshots</id>
            <name>access-snapshot</name>
            <url>https://artifactory.1and1.org/artifactory/access-snapshot</url>
        </snapshotRepository>
    </distributionManagement>

</project>